[package]
name = "uset"
version = "0.1.0"
authors = ["Maciej Gorywoda <makingthematrix@gmail.com>"]
edition="2018"
homepage="https://github.com/makingthematrix/uset"
repository="https://github.com/makingthematrix/uset"
readme="./README.md"
license="MIT"
keywords=["set", "map", "ECS", "collections"]
categories=["algorithms", "data-structures", "game-engines"]
description="An implementation of a set and a map designed for speed, with unsigned integers as keys."

[profile.bench]
debug=true

[dependencies]
rand = "0.7"
itertools = "0.8.0"
lazy_static = "1.4.0"
[dev-dependencies]
quickcheck = "0.9.0"
spectral = "0.6.0"
criterion = "0.3.0"

[[bench]]
name = "criterion_tests"
harness = false
